--- a/BirthrightASP/Views/Home/Index.cshtml
+++ b/BirthrightASP/Views/Home/Index.cshtml
@@ -3,9 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+  @*  @Scripts.Render("~bundles/PtolemyJS")*@
+    <script language=javascript data-main='~/Scripts/PtolemyJS/ptolemy/app' src='~/Scripts/PtolemyJS/node_modules/requirejs/require.js'></script>
+    <h1>PtolemyJS</h1>
+    <p>
+    PtolemyJS is an Open Source 2D map engine for video games in JS !
+    You can find the <a href="https://github.com/feelic/PtolemyJS">source code on github</a>
+    <p>
+    <p>
+        PtolemyJS is inspired by
+    </p>
+    <ul>
+        <li>Paradox Interactive's Clausewitz engine</li>
+        <li>Amit Patel's fantastic work on <a href="http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/">procedural map generation with voronoi diagrams</a></li>
+    </ul>
+    <p>
+        <button id="randomMap">Create a Random Map</button> with <input id="cellsCount" value="200" type="number"> cells <button id="exportMap">Export Map</button> <button id="importMap">Import Map</button>
+    </p>
+
+    <p>
+        <textarea id="mapInput"></textarea>
+    </p>
+    <div style="width: 800px;"
+         id="canvas">
+    </div>
 </div>
 
 <div class="row">
