Added require.js nuget package. Got map working. NOTE: Clear and empty browser cache when working with javascript files.

--- a/BirthrightASP/Views/Home/Index.cshtml
+++ b/BirthrightASP/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
 }
 
 <div class="jumbotron">
-  @*  @Scripts.Render("~bundles/PtolemyJS")*@
-    <script language=javascript data-main='~/Scripts/PtolemyJS/ptolemy/app' src='~/Scripts/PtolemyJS/node_modules/requirejs/require.js'></script>
+   @* @Scripts.Render("~bundles/PtolemyJS")*@
     <h1>PtolemyJS</h1>
     <p>
     PtolemyJS is an Open Source 2D map engine for video games in JS !
@@ -24,7 +23,7 @@
     <p>
         <textarea id="mapInput"></textarea>
     </p>
-    <div style="width: 800px;"
+    <div style="width: 800px;height:600px"
          id="canvas">
     </div>
 </div>
